# shamam

./: .gitignore  .gitlab-ci.yml  Cargo.toml  meson.build  meson_options.txt
.github/workflows/: ci.yml
build-aux/: com.github.RoshanR.shamam.Devel.json  com.github.RoshanR.wazam.Devel.json
data/: com.github.RoshanR.shamam.desktop.in.in  com.github.RoshanR.shamam.gschema.xml.in  com.github.RoshanR.shamam.metainfo.xml.in.in  com.github.RoshanR.wazam.desktop.in.in  com.github.RoshanR.wazam.gschema.xml.in  com.github.RoshanR.wazam.metainfo.xml.in.in
data/resources/: meson.build  resources.gresource.xml
data/resources/ui/: window.blp  window.ui
packaging/: APKBUILD
po/: POTFILES.in
src/: application.rs  example.rs  main.rs  window.rs
src/core/: http_thread.rs  microphone_thread.rs  processing_thread.rs
src/utils/: image.rs
