[package]
name = "wazam"
authors = ["Roshan R Chandar <roshanr2001@gmail.com>"]
edition = "2021"

[profile.release]
lto = true

[dependencies]
chfft = "0.3.4" # Fast Fourier transform
byteorder = "1.3.4" # Used for reading and writing binary structures
crc32fast = "1.2.0" # Used for the CRC-32 checksum in the binary signature
base64 = "0.12.3"
reqwest = { version = "0.10.7", features = ["blocking", "json"] }
rodio = "0.13.1" # For reading WAV/MP3/FLAG/OGG files, resampling and playing audio.
clap = "2.33.2" # For argument parsing
cpal = "=0.13.3" # For recording audio
hound = "3.4.0" # For writing WAV files
serde_json = "1.0.57" # For decoding and encoding JSON
uuid = { version = "0.8.1", features = ["v4"] }
serde = { version = "1.0.115", features = ["derive"] }
csv = "1.1.3"
regex = "1.5.4"
rand = "0.7.3"
# Note: gettext-rs and gettext-sys have been intentionnally downgraded:
# the latest versions don't link under Windows when cross-compiling using MinGW.
gettext-sys = { version = "0.19.9", features = ["gettext-system"] }
gettext-rs = { version = "0.5.0" }
tempfile = "3.2.0"
mpris-player = "0.6.1"
chrono = "0.4.26"
adw = { version = "0.7.1", package = "libadwaita", features = ["v1_5"] }
gtk = { version = "0.9.5", package = "gtk4", features = ["v4_12"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
async-channel = "2.3.1"
gdk-pixbuf = "0.20.7"

[target.'cfg(target_os = "linux")'.dependencies]
gag = "0.1.10" # Crate to silence stderr when CPAL produces uncontrolled AlsaLib output
